# ComfyUI_FL-HeartMuLa

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
fl_nodes/: __init__.py  conditioning.py  decode.py  model_loader.py  sampler.py  tags_builder.py  transcribe.py
fl_utils/: __init__.py  audio_utils.py  model_manager.py  paths.py
heartlib/: __init__.py
heartlib/heartcodec/: configuration_heartcodec.py  modeling_heartcodec.py
heartlib/heartcodec/models/: flow_matching.py  sq_codec.py  transformer.py
heartlib/heartmula/: configuration_heartmula.py  modeling_heartmula.py
heartlib/pipelines/: lyrics_transcription.py  music_generation.py
web/css/: heartmula.css
web/js/: heartmula_conditioning.js
workflow/: Example.json
